<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewJewel">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/jewelry_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/lblJewelType"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/type"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/lstJewelType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/lblMaterial"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/material"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/lstMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/lblStone"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/stone"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/lstStone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <CheckBox
            android:id="@+id/chkEngraved"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/engraved" />

        <TextView
            android:id="@+id/lblPrice"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/price"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/btnAddJewel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:onClick="addNewJewel"
            android:text="@string/place_order" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />


    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>